bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: not found: value msg
  msg=litMessage
  ^BDR2:4: error: not found: value msg
  msg match{
  ^